--- a/manifest.json
+++ b/manifest.json
@@ -15,8 +15,13 @@
     "default_title": "browser action demo",
     "default_popup": "src/browser_action/browser_action.html"
   },
+  "options_ui": {
+    "page": "src/options_custom/options_custom.html",
+    "chrome_style": true
+  },
   "permissions": [
     "activeTab",
+    "storage",
     "https://mai.dev/"
   ]
 }
